--- a/File/loginform.html
+++ b/File/loginform.html
@@ -16,7 +16,7 @@
                     align-items: center;
                     width: 100%;
                     height: 100vh;
-                    background:url(bg1.jpg);
+                    background:url("https://wallpaperaccess.com/full/1683478.jpg");
                     background-size: cover;
                     background-position: center;
                     animation: animatebg 6s linear infinite;
@@ -40,11 +40,10 @@
                 }
                 h2{
                     font-size: 1.6em;
-                    color: black;
+                    color: silver;
                     text-align: center;
                     font-style: italic;
                     font-family: 'Courier New', Courier, monospace ;
-                    text-shadow: 1px 1px blue; 
                     text-transform: uppercase;
                 }
                 .input-box{
