--- a/File/loginform.html
+++ b/File/loginform.html
@@ -16,31 +16,33 @@
                     align-items: center;
                     width: 100%;
                     height: 100vh;
-                    background:url("https://wallpaperaccess.com/full/1683478.jpg");
+                    background:url("https://wallpaperaccess.com/full/214901.jpg");
                     background-size: cover;
                     background-position: center;
                     animation: animatebg 6s linear infinite;
                 }
-                @keyframes animatebg{
+                /* @keyframes animatebg{
                     100%{
                         filter: hue-rotate(360deg);
                     }
-                }
+                } */
                 .login-box{
                     position: relative;
                     width: 330px;
                     height: 380px;
                     background:transparent;
-                    border: 2px solid silver;
+                    border: 2px solid rgb(226, 241, 247);
                     border-radius: 20px;
                     display:flex;
                     justify-content: center;
                     align-items: center;
-                    backdrop-filter: blur(16px);
+                    backdrop-filter: blur(10px);
                 }
                 h2{
+                    margin-top: 30px;
                     font-size: 1.6em;
-                    color: silver;
+                    color: black;
+                    text-shadow: 1px 1px skyblue;
                     text-align: center;
                     font-style: italic;
                     font-family: 'Courier New', Courier, monospace ;
@@ -50,15 +52,16 @@
                     position: relative;
                     width: 310px;
                     margin: 30px;
-                    border-bottom: 2px solid whitesmoke;
+                    border-bottom: 2px solid rgb(172, 168, 168);
                 }
                 .input-box label{
                     position: absolute;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                     top: 50%;
                     left: 5px;
                     transform: translateY(-50%);
                     font-size: 1em;
-                    color: aliceblue;
+                    color: black;
                     pointer-events: none;
                     transition: .5s;
                 }
@@ -73,7 +76,7 @@
                     border: none;
                     outline: none;
                     font-size: 1em;
-                    color: black;
+                    color: white;
                     padding: 0 35px 0 5px;
                 }
                 .input-box .icon{
@@ -87,8 +90,9 @@
                     margin: -13px 0 13px 0;
                     font-size: .9em;
                     color: aliceblue;
+                    text-shadow: 1px 1px black;
                     display: flex;
-                    justify-content: space-around;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;            justify-content: space-around;
                 }
                 .remember-forget label input{
                     margin-right: 2px;
@@ -99,32 +103,43 @@
                 }
                 .remember-forget a:hover{
                     text-decoration: underline;
+                    color: blue;
                 }
                 button{
                     width: 80%;
                     height: 30px;
-                    background: white;
+                    background: black;
+                    margin-top: 3%;
                     border: none;
                     outline: none;
                     border-radius: 39px;
                     cursor: pointer;
-                    color: black;
+                    color: skyblue;
                     font-weight: 600;
                     
                 }
+                button:hover{
+                    background-color: aqua;
+                    color: black;
+                }
                 .register-link{
                     font-size: .9em;
-                    color: antiquewhite;
+                    color: black;
                     text-align: center;
                     margin: 25px 0;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 }
                 .register-link p a{
-                    color: antiquewhite;
+                    display: block;
+                    color: rgb(153, 165, 170);
                     text-decoration: none;
                     font-weight: 600;
+                    text-shadow: 1px 1px black;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 }
                 .register-link p a:hover{
                     text-decoration: underline;
+                    color: aqua;
                 }
                 @media (max-width:360px){
                     .login-box{
